[gd_scene load_steps=20 format=3 uid="uid://cqnmhhvmiskhk"]

[ext_resource type="Script" uid="uid://dwxap3lt5i2jj" path="res://src/scenes/entities/lilypad/lily_pad.gd" id="1_s3khd"]
[ext_resource type="Texture2D" uid="uid://bt3jvdq3jh1rn" path="res://assets/lilypad/lilypad_sheet.png" id="2_4qo4r"]
[ext_resource type="AudioStream" uid="uid://b7uougst63ygr" path="res://assets/audio/sfx/confirmation_003.ogg" id="2_hh50s"]
[ext_resource type="Texture2D" uid="uid://dpwijr8n7w4yx" path="res://assets/frogger/frogger_bob.png" id="3_p57cj"]
[ext_resource type="AudioStream" uid="uid://d0ron6kndq2ik" path="res://assets/audio/sfx/upgrade4.ogg" id="3_xxo3f"]

[sub_resource type="Animation" id="Animation_4qo4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FroggerSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hh50s"]
resource_name = "bob"
length = 4.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FroggerSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxo3f"]
_data = {
&"RESET": SubResource("Animation_4qo4r"),
&"bob": SubResource("Animation_hh50s")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3khd"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_layua"]
atlas = ExtResource("2_4qo4r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_detuv"]
atlas = ExtResource("2_4qo4r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjbad"]
atlas = ExtResource("2_4qo4r")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sunvp"]
atlas = ExtResource("2_4qo4r")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vjbap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_layua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjbad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sunvp")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xjbp1"]
atlas = ExtResource("3_p57cj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc07c"]
atlas = ExtResource("3_p57cj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l1yf"]
atlas = ExtResource("3_p57cj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd8mm"]
atlas = ExtResource("3_p57cj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xqqhc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjbp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc07c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l1yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd8mm")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[node name="LilyPad" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_s3khd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_hh50s")

[node name="LevelCompleteStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_xxo3f")
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xxo3f")
}
autoplay = "bob"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s3khd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vjbap")

[node name="FroggerSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_xqqhc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
